fixed SubHeader cramped links (#184)
* fixed SubHeader cramped links

* resolved 200px+ the breadcrumbs are in a row

--- a/src/apps/content-editor/src/app/views/ItemEdit/components/SubHeader/SubHeader.less
+++ b/src/apps/content-editor/src/app/views/ItemEdit/components/SubHeader/SubHeader.less
@@ -14,11 +14,20 @@
 
   .Path {
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     flex: 1;
 
+    @media only screen and (min-width: 2000px) {
+      flex-direction: row;
+    }
+
     .Preview {
       display: flex;
+      flex-direction: column;
+      @media only screen and (min-width: 2000px) {
+        flex-direction: row;
+      }
     }
 
     a {
